# TransCoord

./: README.md  configure.ac
lib/graph/: directed_graph.cc  directed_graph.h  edge_base.cc  edge_base.h  graph_base.cc  graph_base.h  undirected_graph.cc  undirected_graph.h  vertex_base.cc  vertex_base.h
lib/gtf/: gene.cc  gene.h  genome.cc  genome.h  item.cc  item.h  transcript.cc  transcript.h
lib/util/: util.cc  util.h
src/: Makefile.am  assembler.cc  assembler.h  bundle.cc  bundle.h  config.cc  config.h  edge_info.cc  edge_info.h  equation.cc  equation.h  filter.cc  filter.h  gurobi_mip.cc  gurobi_mip.h  hit.cc  hit.h  hyper_set.cc  hyper_set.h  interval_map.cc  interval_map.h  junction.cc  junction.h  main.cc  overlap_graph.cc  overlap_graph.h  partial_exon.cc  partial_exon.h  path.cc  path.h  phasing_graph.cc  phasing_graph.h  previewer.cc  previewer.h  region.cc  region.h  router.cc  router.h  scallop.cc  scallop.h  (+10 more)
